[package]
name = "snark-tutorial"
version = "0.1.0"
authors = ["Pratyush Mishra <pratyushmishra@berkeley.edu>"]
edition = "2018"

[dependencies]
algebra = { git = "https://github.com/scipr-lab/zexe" }
r1cs-core = { git = "https://github.com/scipr-lab/zexe" }
r1cs-std = { git = "https://github.com/scipr-lab/zexe" }
crypto-primitives = { git = "https://github.com/scipr-lab/zexe", features = [ "r1cs" ] }
gm17 = { git = "https://github.com/scipr-lab/zexe" }
rand = { version = "0.7" }
